# discord-beanfun

./: .env.example  .gitignore  Dockerfile  README.md  config.example  docs.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/: main.py  test_app_server.py  test_login.py
src/api/: server.py
src/cogs/: api_cogs.py  beanfun_cogs.py
src/database/: token_db.py
src/exceptions/: beanfun_error.py
src/methods/: beanfun.py
src/utils/: config.py  model.py  util.py
